--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDmPFDqWZ48cok348wMAfr4srJO4k2wbUY" />
+        <activity android:name="MapActivity"></activity>
     </application>
 
 </manifest>
