--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,11 +8,36 @@
         android:minSdkVersion="9"
         android:targetSdkVersion="16" />
 
+    <!-- for the signature -->
+    <permission
+            android:name="com.gatech.spark.permission.MAPS_RECEIVE"
+            android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.gatech.spark.permission.MAPS_RECEIVE" />
+
+    <!-- Required permissions for using Maps -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
+    <!--
+     The following two permissions are not required to use
+     Google Maps Android API v2, but are recommended.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
+    <uses-feature
+            android:glEsVersion="0x00020000"
+            android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps" />
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
@@ -23,6 +48,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.SubscriptionExpandedActivity"/>
+        <!-- Google Maps API Key -->
+        <meta-data
+                android:name="com.google.android.maps.v2.API_KEY"
+                android:value="AIzaSyDmPFDqWZ48cok348wMAfr4srJO4k2wbUY" />
     </application>
 
 </manifest>
