--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -53,10 +53,8 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDmPFDqWZ48cok348wMAfr4srJO4k2wbUY" />
         <activity android:name=".activity.LotExpandedActivity"/>
-        <!-- Google Maps API Key -->
-        <meta-data
-                android:name="com.google.android.maps.v2.API_KEY"
-                android:value="AIzaSyDmPFDqWZ48cok348wMAfr4srJO4k2wbUY" />
+        <activity android:name=".activity.SubscriptionExpandedActivity"/>
+        
     </application>
 
 </manifest>
