--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,7 +39,7 @@
         android:theme="@style/AppTheme" >
         <uses-library android:name="com.google.android.maps" />
         <activity
-            android:name=".activity.SparkMapActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -53,9 +53,8 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDmPFDqWZ48cok348wMAfr4srJO4k2wbUY" />
         <activity android:name=".activity.LotExpandedActivity"/>
-        <activity android:name=".activity.SubscriptionsActivity"/>
-        <activity android:name=".activity.WhatsHotActivity"/>
 
+        
     </application>
 
 </manifest>
