--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,14 +38,24 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" android:name=".application.Spark">
         <uses-library android:name="com.google.android.maps" />
+
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
         </activity>
 
         <!-- Google Maps API Key -->
