--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,6 +55,9 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="com.gatech.spark.action.FIND_PARKING" />
+            </intent-filter>
 
         </activity>
 
